--- a/main.css
+++ b/main.css
@@ -1,3 +1,15 @@
 body {
     background-color: lightgray;
 }
+
+.container {
+    width:100%;
+
+}
+
+.container2, .message {
+    display: block;
+    margin-top: 100px;
+    width: 80%;
+}
+
