--- a/main.css
+++ b/main.css
@@ -22,4 +22,15 @@ body {
     font-size: 1.25em;
 }
 
+#message-div {
+    border: 1.5px solid #000;
+    padding: 15px;
+}
 
+.edit, .delete {
+    margin-left: 7px;
+}
+
+.message-user {
+    font-weight: bold;
+}
