--- a/main.css
+++ b/main.css
@@ -9,8 +9,11 @@ body {
 
 .container2, .message {
     display: block;
+    margin: 0 auto;
     margin-top: 100px;
     width: 80%;
+    
+
 }
 
 .darkTheme {
