--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
 
 .container2, .message {
     display: block;
-    margin-top: 100px;
+    margin-top: 120px;
     width: 80%;
 }
 
@@ -25,6 +25,8 @@ body {
 #message-div {
     border: 1.5px solid #000;
     padding: 15px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 .edit, .delete {
@@ -34,4 +36,8 @@ body {
 
 .message-user {
     font-weight: bold;
+}
+
+.row {
+    margin: 10px 0;
 }
